checkpolicy/tests/negative/unknown_perm.te
module unknown_perm 1.0;

require {
	type foo_t, bar_t;
	class file { read };
}

allow foo_t bar_t:file circular_ref;
